clusters/talos-cluster/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr-server
  name: overseerr-server
  namespace: overseerr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: overseerr-server
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: overseerr-server
    spec:
      containers:
        - name: overseerr-server
          image: lscr.io/linuxserver/overseerr:1.35.0@sha256:6108ed066d4a919c05251d9dab041c1e55e67ff7247e7b31be97b65ffcbaeeb1
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
              name: overseerr
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /config
              name: overseerr-config-volume
      restartPolicy: Always
      volumes:
        - name: overseerr-config-volume
          persistentVolumeClaim:
            claimName: overseerr-config-pvc
