clusters/talos-cluster/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
  namespace: overseerr
spec:
  selector:
    app: overseerr-server
  ports:
    - port: 5055
      targetPort: 5055
      name: overseerr
      protocol: TCP
